--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
 </section> -->
 
 <router-outlet></router-outlet>
+<app-toast id="toast" class="flex items-center justify-center lg:justify-end" [header]="toastHeader" [message]="toastMessage"></app-toast>
 
