--- a/src/app/pages/forms/education-form/education-form.component.html
+++ b/src/app/pages/forms/education-form/education-form.component.html
@@ -111,7 +111,7 @@
             class="reset-password-btn rounded-lg bg-white border flex-grow border-[#D0D5DD] text-[#344054] py-3 px-6 SF-Medium"
             href="">Previous</button>
 
-            <button
+            <button (click)="saveToCollection()"
             class="logout-btn rounded-lg bg-[#EDF6FF] border flex-grow border-[#EDF6FF] text-blue py-3 px-6 SF-Medium"
             href="">Save to Collection</button>
         </div>
