--- a/src/app/pages/cv-editor/cv-editor.component.html
+++ b/src/app/pages/cv-editor/cv-editor.component.html
@@ -12,7 +12,7 @@
 
 
             @if(auth.user$ | async; as user) {
-                <div style="background-image: url('{{user.picture}}');" class="profile w-12 h-12 rounded-full bg-cover bg-center bg-no-repeat bg-gray-200">
+                <div (click)="openProfileDialog()" style="background-image: url('{{user.picture}}');" class="profile w-12 h-12 rounded-full bg-cover bg-center bg-no-repeat bg-gray-200">
 
                 </div>
             }@else {
@@ -95,6 +95,16 @@
             <div id="pdfContent" #pdfContent>
                 <ng-container *ngComponentOutlet="selectedTemplate; injector: dynamicComponentInjector() inputs: { formData, selectedImageUrl }"></ng-container>
             </div>
+
+            @if (!selectedTemplate) {
+                <div class="flex flex-col items-center">
+                    <span class="Raleway-SemiBold text-2xl">You have no template selected</span>
+                    <span class="Raleway-Regular text-sm">Pick one from our options to get started!</span>
+                    <button (click)="openTemplateDialog()" class="bg-blue rounded-lg px-6 py-2 flex items-center gap-3 mt-3">
+                        <span class="Raleway-Regular text-[#fff]">Choose Template</span>
+                    </button>
+                </div>
+            }
         </div>
     </div>
 
@@ -112,6 +122,37 @@
                 [selectedImageUrl]="selectedImageUrl"></app-cv-builder>
         </div>
     </div>
+    }
+
+
+    @if (isProfileDialogOpen) {
+        <div class="template-dialog w-full h-full absolute top-0 left-0 flex items-center justify-center">
+            <div (click)="openProfileDialog()" class="layer absolute top-0 left-0 w-full h-full bg-[#00000050] z-40">
+    
+            </div>
+    
+            <div class="dialog-container w-[90%] 3xl:w-[85%] overflow-x-hidden h-4/5 bg-white rounded-xl relative z-[9999]">
+
+                <div class="banner-container w-full relative flex items-center justify-center">
+                    <div class="banner w-full h-52 bg-blue">
+
+                    </div>
+
+                    <div style="background-image: url({{user?.picture}});" class="profile absolute border-4 border-white bottom-[-2rem] bg-center bg-cover bg-no-repeat w-28 h-28 rounded-full"></div>
+                </div>
+
+                <div class="info-container w-full flex flex-col items-center mt-12">
+                    <span class="Raleway-SemiBold text-3xl">{{user?.name}}</span>
+                    <span class="Inter-Regular text-sm">{{user?.email}}</span>
+
+                </div>
+
+                <div class="content-container w-full py-6 px-12 flex flex-col items-start gap-6">
+                    <span class="Raleway-Medium text-xl">My Collection</span>
+                </div>
+                
+            </div>
+        </div>
     }
 
 
