changed to prod backend

--- a/src/app/components/callback-page/callback-page.component.html
+++ b/src/app/components/callback-page/callback-page.component.html
@@ -1,8 +1,8 @@
-<div class="redirect-container w-full h-full flex flex-col items-center justify-center bg-white">
+<div class="redirect-container w-full h-full flex flex-col items-center justify-center bg-white gap-8">
 
     <img class="w-32" src="/assets/images/logo.png" alt="">
 
-    <div class="progress-container w-2/4 bg-gray-200 rounded-lg overflow-hidden">
+    <div class="progress-container w-1/4 bg-gray-200 rounded-lg overflow-hidden">
         <div class="progress-bar h-5 bg-blue w-0" [style.width.%]="progress"></div>
     </div>
 </div>
