added custom auth page

--- a/src/app/pages/cv-editor/cv-editor.component.html
+++ b/src/app/pages/cv-editor/cv-editor.component.html
@@ -16,9 +16,9 @@
 
                 </div>
             }@else {
-                <button (click)="auth.loginWithRedirect()"
-                class="login rounded-lg bg-white border flex-grow border-[#D0D5DD] text-[#344054] py-3 px-6 SF-Medium"
-                href="">Login</button>
+                <div routerLink="/login"
+                class="login rounded-lg hover:cursor-pointer bg-white border flex-grow border-[#D0D5DD] text-[#344054] py-3 px-6 SF-Medium"
+                href="">Login</div>
             }
 
 
