--- a/src/app/pages/forms-new/education-form/education-form.component.html
+++ b/src/app/pages/forms-new/education-form/education-form.component.html
@@ -106,7 +106,7 @@
 
 
     <div class="button-group flex items-center gap-4 w-full pb-12">
-        <div class="flex items-center gap-4 w-full">
+        <!-- <div class="flex items-center gap-4 w-full">
             <button (click)="onPreviousClick(1)"
             class="reset-password-btn rounded-lg bg-white border flex-grow border-[#D0D5DD] text-[#344054] py-3 px-6 SF-Medium"
             href="">Previous</button>
@@ -114,7 +114,7 @@
             <button (click)="saveToCollection()"
             class="logout-btn rounded-lg bg-[#EDF6FF] border flex-grow border-[#EDF6FF] text-blue py-3 px-6 SF-Medium"
             href="">Save to Collection</button>
-        </div>
+        </div> -->
 
     </div>
 </form>
