--- a/src/app/pages/forms-new/experience-form/experience-form.component.html
+++ b/src/app/pages/forms-new/experience-form/experience-form.component.html
@@ -208,7 +208,7 @@
 
 
     <div class="button-group flex items-center gap-4 w-full pb-12">
-        <div class="flex items-center gap-4 w-full">
+        <!-- <div class="flex items-center gap-4 w-full">
             <button type="button" (click)="onPreviousClick(0)"
                 class="reset-password-btn rounded-lg bg-white border flex-grow border-[#D0D5DD] text-[#344054] py-3 px-6 SF-Medium"
                 href="">Previous</button>
@@ -216,7 +216,7 @@
             <button type="button" (click)="onContinueClick(2)"
                 class="logout-btn rounded-lg bg-[#EDF6FF] border flex-grow border-[#EDF6FF] text-blue py-3 px-6 SF-Medium"
                 href="">Save & Continue</button>
-        </div>
+        </div> -->
 
     </div>
 
@@ -261,7 +261,7 @@
                 }
 
             </div> -->
-
+<!-- 
             <div class="flex flex-col h-[-webkit-fill-available] bg-gray-100">
                 <div class="flex-grow flex flex-col p-4 overflow-y-auto h-[15rem]" id="chatHistory">
                     @for (message of messages; track $index) {
@@ -284,7 +284,7 @@
                          class="flex-grow p-2 border Inter-Regular border-gray-300 rounded-md focus:outline-none" />
                   <button (click)="sendMessage()" class="ml-2 py-2 px-5 Raleway-Medium bg-blue text-white rounded-md">Send</button>
                 </div>
-              </div>
+              </div> -->
               
         </div>
     </div>
