--- a/src/app/pages/cv-editor/cv-editor.component.scss
+++ b/src/app/pages/cv-editor/cv-editor.component.scss
@@ -27,3 +27,36 @@
     color: #1172cc;
   }
 }
+
+
+
+
+
+
+
+@media print {
+  body * {
+    visibility: hidden;
+  }
+
+  #print-area, #print-area * {
+    visibility: visible;
+  }
+
+  #print-area {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+  }
+
+  .non-printable {
+    display: none;
+  }
+
+  html, body {
+    margin: 0 !important;
+    padding: 0 !important;
+    background: white;
+  }
+}
