--- a/src/app/pages/forms-new/personal-info-form/personal-info-form.component.html
+++ b/src/app/pages/forms-new/personal-info-form/personal-info-form.component.html
@@ -13,7 +13,7 @@
                 class="bg-cover bg-center bg-no-repeat w-16 flex-shrink-0 h-16 rounded-full border border-[#EAECF0]">
             </div> -->
 
-            <input formControlName="profileImage" (change)="onFileSelected($event)" class="hidden"
+            <input formControlName="selectedImageUrl" (change)="onFileSelected($event)" class="hidden"
                 type="file" id="input-file" />
             <label for="input-file"
                 class="file-upload w-[-webkit-fill-available] w-[-moz-available] cursor-pointer py-4 px-6 rounded-xl border border-[#EAECF0] flex flex-col bg-white items-center gap-3">
